# py-anansi

./: README.md  pyproject.toml
src/anansi/: __init__.py  escape_char.py
src/anansi/font/: __init__.py  esc.py
src/anansi/font/colors/: __init__.py  _color_id.py
src/anansi/font/colors/background/: __init__.py  _background.py
src/anansi/font/colors/foreground/: __init__.py  _foreground.py
src/anansi/font/effects/: __init__.py  _effects.py
src/anansi/font/ideograms/: __init__.py  _ideograms.py
src/ansi_esc/: __init__.py
src/ansi_esc/font/: __init__.py  esc.py
src/ansi_esc/font/colors/: __init__.py
src/ansi_esc/font/colors/background/: __init__.py  _background.py
src/ansi_esc/font/colors/foreground/: __init__.py  _foreground.py
src/ansi_esc/font/effects/: __init__.py  _effects.py
src/ansi_esc/font/ideograms/: __init__.py  _ideograms.py
